test/netlist/error/fun-param-arity.bop
P<N, M>(a) = b
where
  b = N(M(a));
end where;

Main(a) = b
where
  b = P<not>(a);
end where;
